--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>My App</title>
-</head>
-<body>
-	HOLA
-</html>
+{{#> template}}
+<h1>Bienvenido!</h1>
+{{> cards}}
+
+{{/template}}
+
