intento de conect

--- a/views/app.hbs
+++ b/views/app.hbs
@@ -1,6 +1,16 @@
 {{#> template}}
 Este es tu inicio jiji
 
+<div class="encabezado">
+    <a style="text-decoration: none" href="/"><img src="/src/images/Sin título-1.png" class="dot-inicio"></a>
+    <h1 class="titulo"> INICIO</h1>
+</div>
+
+<h2>Deteccion camara web</h2>
+<video id="webCam"></video>
+
+
+
  <div class="card-tracker card">              
             <h3>Buscar regalo</h3>
             <p>ingrese sus datos</p>                  
