--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,7 +4,24 @@
     <h1 class="titulo"> INICIO</h1>
 </div>
 
-<h2>Deteccion camara web</h2>
-<video id="webCam"></video>
-{{> cardsinicio}}
+<div class="total-cards ">                      
+        <div class="iniciosesion card"> 
+            <h3 class="linkinicio">Inicio</h3>
+            <form action="login" method="POST">  {{!-- BUSCAR INFO DE ACTION --}}
+                <div class="campo">
+                    <label >Usuario/Email </label>
+                    <input type="text" name="username"  id="">  {{!-- Se usa username porque acá se pide esa variables en routes "passport.use(new PassportLocal(function(-->username,password,done)"{ --}}
+                </div>
+
+                <div class="campo">
+                    <label >Contraseña</label>
+                    <input type="password" name="password" id="">
+                    <input class="boton" type="submit" value="Iniciar Sesion">
+                    <a style="text-decoration: none" href="/registro">registrate</a>
+                </div>
+            </form>  
+        </div> 
+</div>
+
+
 {{/template}}
