--- a/views/login.hbs
+++ b/views/login.hbs
@@ -10,12 +10,12 @@
             <form action="login" method="POST">  {{!-- BUSCAR INFO DE ACTION --}}
                 <div class="campo">
                     <label >Usuario/Email </label>
-                    <input type="text" name="username"  id="">  {{!-- Se usa username porque acá se pide esa variables en routes "passport.use(new PassportLocal(function(-->username,password,done)"{ --}}
+                    <input type="text" name="username" >  {{!-- Se usa username porque acá se pide esa variables en routes "passport.use(new PassportLocal(function(-->username,password,done)"{ --}}
                 </div>
 
                 <div class="campo">
                     <label >Contraseña</label>
-                    <input type="password" name="password" id="">
+                    <input type="password" name="password" >
                     <input class="boton" type="submit" value="Iniciar Sesion">
                     <a style="text-decoration: none" href="/registro">registrate</a>
                 </div>
