--- a/views/mapa.hbs
+++ b/views/mapa.hbs
@@ -6,13 +6,14 @@
 <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no">
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.13.0/mapbox-gl.js"></script>
-<style>
-body { margin: 0; padding: 0; }
-#map { position: absolute; top: 0; bottom: 0; width: 100%; }
-</style>
+<link rel="stylesheet" href="/src/css/style.css">
+
 </head>
 <body>
+<div id="map-container">
 <div id="map"></div>
+</div>
+
 
  
 </body>
